load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["builder.go"],
    importpath = "k8s.io/kops/pkg/assets",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/kops:go_default_library",
        "//pkg/featureflag:go_default_library",
        "//pkg/kubemanifest:go_default_library",
        "//pkg/values:go_default_library",
        "//util/pkg/hashing:go_default_library",
        "//util/pkg/vfs:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["builder_test.go"],
    embed = [":go_default_library"],
    importpath = "k8s.io/kops/pkg/assets",
    deps = ["//pkg/apis/kops:go_default_library"],
)
