load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "builder.go",
        "copy.go",
        "copyfile.go",
        "copyimage.go",
    ],
    importpath = "k8s.io/kops/pkg/assets",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/acls:go_default_library",
        "//pkg/apis/kops:go_default_library",
        "//pkg/apis/kops/util:go_default_library",
        "//pkg/featureflag:go_default_library",
        "//pkg/kubemanifest:go_default_library",
        "//pkg/values:go_default_library",
        "//util/pkg/hashing:go_default_library",
        "//util/pkg/mirrors:go_default_library",
        "//util/pkg/vfs:go_default_library",
        "//vendor/github.com/blang/semver/v4:go_default_library",
        "//vendor/github.com/google/go-containerregistry/pkg/authn:go_default_library",
        "//vendor/github.com/google/go-containerregistry/pkg/name:go_default_library",
        "//vendor/github.com/google/go-containerregistry/pkg/v1/remote:go_default_library",
        "//vendor/github.com/google/go-containerregistry/pkg/v1/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "builder_test.go",
        "copyfile_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/kops:go_default_library",
        "//pkg/apis/kops/util:go_default_library",
        "//pkg/testutils/golden:go_default_library",
    ],
)
