load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["builder.go"],
    importpath = "k8s.io/kops/pkg/bundle",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/kops:go_default_library",
        "//pkg/apis/kops/registry:go_default_library",
        "//pkg/apis/nodeup:go_default_library",
        "//pkg/assets:go_default_library",
        "//pkg/client/simple:go_default_library",
        "//pkg/kopscodecs:go_default_library",
        "//pkg/model:go_default_library",
        "//upup/pkg/fi:go_default_library",
        "//upup/pkg/fi/cloudup:go_default_library",
        "//upup/pkg/fi/utils:go_default_library",
        "//util/pkg/vfs:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
    ],
)
