load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cloud_instance.go",
        "cloud_instance_group.go",
    ],
    importpath = "k8s.io/kops/pkg/cloudinstances",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/kops:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["cloud_instance_group_test.go"],
    embed = [":go_default_library"],
)
