load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["supported.go"],
    importpath = "k8s.io/kops/pkg/clouds",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/kops:go_default_library",
        "//pkg/featureflag:go_default_library",
    ],
)
