load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "helpers_readwrite.go",
        "set_cluster.go",
        "status_discovery.go",
        "version.go",
    ],
    importpath = "k8s.io/kops/pkg/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//cmd/kops/util:go_default_library",
        "//pkg/apis/kops:go_default_library",
        "//pkg/apis/kops/validation:go_default_library",
        "//pkg/assets:go_default_library",
        "//pkg/client/simple:go_default_library",
        "//pkg/featureflag:go_default_library",
        "//pkg/resources/digitalocean:go_default_library",
        "//upup/pkg/fi/cloudup:go_default_library",
        "//upup/pkg/fi/cloudup/aliup:go_default_library",
        "//upup/pkg/fi/cloudup/awstasks:go_default_library",
        "//upup/pkg/fi/cloudup/awsup:go_default_library",
        "//upup/pkg/fi/cloudup/gce:go_default_library",
        "//upup/pkg/fi/cloudup/openstack:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/validation/field:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["set_cluster_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/kops:go_default_library",
        "//upup/pkg/fi:go_default_library",
    ],
)
