load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "helpers.go",
        "helpers_readwrite.go",
        "set_cluster.go",
        "set_instancegroups.go",
        "unset_cluster.go",
        "unset_instancegroups.go",
        "version.go",
    ],
    importpath = "k8s.io/kops/pkg/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//cmd/kops/util:go_default_library",
        "//pkg/apis/kops:go_default_library",
        "//pkg/apis/kops/validation:go_default_library",
        "//pkg/assets:go_default_library",
        "//pkg/client/simple:go_default_library",
        "//pkg/commands/helpers:go_default_library",
        "//upup/pkg/fi/cloudup:go_default_library",
        "//util/pkg/reflectutils:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/kubectl/pkg/util/i18n:go_default_library",
        "//vendor/k8s.io/kubectl/pkg/util/templates:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "set_cluster_test.go",
        "set_instancegroups_test.go",
        "unset_cluster_test.go",
        "unset_instancegroups_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/kops:go_default_library",
        "//upup/pkg/fi:go_default_library",
    ],
)
